--- a/KelpNet.CL.Function/Properties/Resources.resx
+++ b/KelpNet.CL.Function/Properties/Resources.resx
@@ -119,33 +119,33 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Activation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\activations\activation.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Activations\Activation.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Convolution2D" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\connections\convolution2d.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Connections\Convolution2D.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Deconvolution2D" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\connections\deconvolution2d.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Connections\Deconvolution2D.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Dropout" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\noise\dropout.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Noise\Dropout.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="LeakyReLU" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\activations\leakyrelu.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Activations\LeakyReLU.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Linear" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\connections\linear.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Connections\Linear.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="MaxPooling2D" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\poolings\maxpooling2d.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Poolings\MaxPooling2D.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="ReLU" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\activations\relu.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Activations\ReLU.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Sigmoid" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\activations\sigmoid.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Activations\Sigmoid.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="TanhActivation" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\clsource\activations\tanhactivation.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\CLSource\Activations\TanhActivation.cl;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
